[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msv"
version = "0.1.0"
description = "Store-agnostic verifier that re-checks the factual currency of code-anchored agent-memory entries against a live Python repository (AST parse only, no execution)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
msv = "msv.cli:main"

[tool.setuptools]
packages = ["msv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
